[gd_scene load_steps=7 format=3 uid="uid://pd078ybsmqxo"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_giqkd"]
[ext_resource type="Texture2D" uid="uid://dxa5sws6jpxyh" path="res://Art/EnemyArt.png" id="2_ofstl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rgbp2"]
radius = 37.0
height = 112.0

[sub_resource type="Animation" id="Animation_gqxxd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyArt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyArt:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -4)]
}

[sub_resource type="Animation" id="Animation_ebm73"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyArt:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 21.9911]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyArt:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, -4), Vector2(0, 1199)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtn8x"]
_data = {
"RESET": SubResource("Animation_gqxxd"),
"die": SubResource("Animation_ebm73")
}

[node name="Enemy" type="Area2D" groups=["Hurt"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_giqkd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rgbp2")

[node name="EnemyArt" type="Sprite2D" parent="."]
position = Vector2(1, -4)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_ofstl")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mtn8x")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
